--- a/docs/guide/i18n.md
+++ b/docs/guide/i18n.md
@@ -1,4 +1,4 @@
-## Internationalization (i18n)
+# Internationalization (i18n)
 
 This [Yii Internationalization Library](https://github.com/yiisoft/i18n/blob/master/src/Locale.php) is used to represent
 a locale. 
